--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -39,3 +39,38 @@ body
 	color: #000000;
 	font: 1em/1.2 "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
 }
+
+/* Page 1 */
+.container1 {
+	margin: 15px, 15px, 15px, 15px;
+}
+
+.floatleft1 {
+	float:left;
+	width: 70%;
+	height: auto;
+}
+
+.floatright1 {
+	float: right;
+	width: 30%;
+	height: auto;
+}
+
+.floatleft2 {
+	float: left;
+	width: 30%;
+	height: 100px;
+}
+
+.floatright2 {
+	float: right;
+	width: 30%;
+	height: 100px;
+}
+
+.floatcentre1 {
+	width: 30%;
+	height: 100px;
+	position: absolute;
+}
