--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -37,7 +37,7 @@ Base styles
 .covidbanner{
 	position: relative;
 	text-align : centre;
-	padding: 15px 15px 5px 15px;
+	padding: 15px 15px 2px 15px;
 	height : 250px;
 	width : 1440px;
 }
@@ -51,14 +51,12 @@ Base styles
 	color : white;
 	font-size : 80px;
 	top:40%;
-	left : 580;
-
-
+	left : 560;
 }
 .infobanner1 {
 	float : left;
-	padding: 5px 5px 15px 15px;
-	height : 100px;
+	padding: 2px 5px 15px 15px;
+	height : 90px;
 	width:480px;
 
 }
@@ -68,7 +66,8 @@ Base styles
 }
 
 .infobanner2 {
-	padding : 2px 2px 15px 5px;
+	float : right;
+	padding : 2px 15px 15px 2px;
 	height : 90px;
 	width : 480px;
 }
@@ -78,7 +77,8 @@ Base styles
 }
 
 .infobanner3 {
-	padding : 2px 15px 15px 5px;
+	float : right;
+	padding : 2px 5px 15px 2px;
 	height :90px;
 	width : 480px;
 }
