--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -566,6 +566,8 @@ input[type=text] {
 	.tbl {
 		border-collapse: collapse;
 		width: 100%;
+		height:280px;
+		overflow:scroll;
 	}
 	
 	.tbl td, .tbl th {
